src/main/java/com/example/frota/errors/ErrorResponse.java
package com.example.frota.errors;

public class ErrorResponse {
    private int status;
    private String erro;
    private String mensagem;

    public ErrorResponse(int status, String erro, String mensagem) {
        this.status = status;
        this.erro = erro;
        this.mensagem = mensagem;
    }

    public int getStatus() { return status; }
    public String getErro() { return erro; }
    public String getMensagem() { return mensagem; }
}

